--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ version = '8.4.0.3'
 
 sourceCompatibility = '11'
 
+
+
 repositories {
   mavenCentral()
 }
@@ -32,6 +34,8 @@ dependencies {
   api "io.camunda.spring:java-common:8.4.0"
   
   testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+  implementation 'org.slf4j:slf4j-simple:1.7.32'
 }
 
 tasks.named('test') {
